@@ -61,6 +61,12 @@ CHANGES
 
   .. _docs: http://reg.readthedocs.org
 
+- Introduce the ``body_model`` predicate for views. You can give it
+  the class of the ``request.body_obj`` you want to handle with this
+  view. In combination with the ``load_json`` directive this allows
+  you to write views that respond only to the POSTing or PUTing of a
+  certain type of object.
+
 - Introduce a ``link_request`` directive that allows you to set the
   URL prefix used by every link generated by the request.
 
